minuscula por maiuscula

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <h1>Calculadora de potência<span style="color: #bc6ff1;">²</span> <span style="color: #bc6ff1;">³</span></h1>
 
     <form>
-        <span>um número:</span><br/>
+        <span>Um número:</span><br/>
         <input type="text" placeholder="digite" autocomplete="off" id="campo1">
         <br/>
-        <span>quer elevar a quanto:</span><br/>
+        <span>Quer elevar a quanto:</span><br/>
         <input type="text" placeholder="digite" autocomplete="off" id="campo2">
         <br/>
         <button onclick="enviar(this)">calcular</button>
